--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,44 @@
+// {
+//   "compilerOptions": {
+//     "jsx": "react",
+//     "lib": [
+//       "es6",
+//       "dom",
+//       "esnext.asynciterable"
+//     ],
+//     "module": "esnext",
+//     "noImplicitReturns": false,
+//     "outDir": "lib",
+//     "sourceMap": true,
+//     "allowSyntheticDefaultImports": true,
+//     "target": "es2017",
+//     "allowJs": true,
+//     "skipLibCheck": true,
+//     "esModuleInterop": true,
+//     "strict": true,
+//     "forceConsistentCasingInFileNames": true,
+//     "moduleResolution": "node",
+//     "resolveJsonModule": true,
+//     "isolatedModules": true,
+//     "noEmit": true
+//   },
+//   "compileOnSave": true,
+//   "include": [
+//     "src"
+//   ]
+// }
+
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
+    "jsx": "react",
+    "lib": ["es6", "dom", "esnext.asynciterable"],
+    "module": "commonjs",
+    "noImplicitReturns": false,
+    "outDir": "lib",
+    "sourceMap": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
+    "target": "es2017"
   },
-  "include": [
-    "src"
-  ]
+  "compileOnSave": true,
+  "include": ["src"]
 }
