--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,29 @@
 {
   "compilerOptions": {
-    "lib": ["es6", "dom", "esnext.asynciterable"],
-    "module": "commonjs",
+    "lib": [
+      "es6",
+      "dom",
+      "esnext.asynciterable"
+    ],
+    "module": "esnext",
     "noImplicitReturns": false,
     "outDir": "lib",
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2017"
+    "target": "es2017",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react"
   },
   "compileOnSave": true,
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
