--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "apollo-boost": "^0.4.9",
+    "apollo-datasource": "^0.7.2",
+    "apollo-datasource-rest": "^0.9.3",
     "apollo-server": "^2.16.1",
+    "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
     "lodash.flowright": "^3.5.0",
     "mongoose": "^5.9.28",
