--- a/servertsconfig.json
+++ b/servertsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "module": "esnext",
+    "module": "commonjs",
     "strict": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
